--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@inlet/react-pixi": "^6.7.0",
+    "pixi-spine": "^3.0.13",
+    "pixi.js": "^6.3.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "sass": "^1.50.1",
     "typescript": "^4.6.3",
